<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/home"
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"/>
    <item android:title="@string/mentors"
        android:id="@+id/mentors"
        android:icon="@drawable/baseline_escalator_warning_24"/>

    <item android:title="@string/learn"
        android:id="@+id/learn"
        android:icon="@drawable/baseline_learn_24"/>
    <item android:title="@string/compete"
        android:id="@+id/compete"
        android:icon="@drawable/baseline_compete"/>
    <item android:title="@string/accouncement"
        android:id="@+id/accouncement"
        android:icon="@drawable/baseline_annoucement_24"/>

    <!--    <item android:title ="@string/profile"-->
<!--        android:id="@+id/profile"-->
<!--        android:icon="@drawable/baseline_account_circle_24"/>-->

<!--    />-->

</menu>