<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/signin"
    android:layout_height="match_parent"
    tools:context=".SignIN">


    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:text="@string/welcome_back"
        android:textColor="@color/darkblue"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/baseline_person_outline_24"
        app:boxStrokeColor="@color/darkblue"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"

        app:helperTextTextColor="@color/darkblue"
        app:hintTextColor="@color/darkblue">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:id="@+id/UserNameEditText"
            android:textColorHint="@color/white"
            android:hint="@string/enter_your_user_name" />


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSignin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/darkblue"
        android:layout_gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tvtosignup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        android:text="@string/don_t_have_account_signup"
        android:textColor="@color/darkblue"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />


</LinearLayout>