<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/signup"
    android:layout_height="match_parent"
    tools:context=".SignUp">



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/person"
        app:boxStrokeColor="@color/darkblue"

        android:layout_gravity="center"
        android:layout_marginTop="220dp"

        app:helperTextTextColor="@color/darkblue"
        app:hintTextColor="@color/darkblue"
       >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:textColorHint="#931F1F"
            android:textStyle="normal"
            android:id="@+id/etName"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/baseline_person_outline_24"
        app:boxStrokeColor="@color/darkblue"
        android:layout_gravity="center"
        android:layout_margin="9dp"
        app:helperTextTextColor="@color/darkblue"
        app:hintTextColor="@color/darkblue">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:id="@+id/etUserName"
            android:textColorHint="@color/darkblue"
            android:hint="@string/enter_your_user_name" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:boxStrokeColor="@color/darkblue"

        android:layout_gravity="center"
        android:layout_margin="6dp"
        app:helperTextTextColor="@color/darkblue"
        app:hintTextColor="@color/darkblue">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:id="@+id/etEmail"
            android:textColorHint="@color/darkblue"
            android:hint="@string/enter_your_mail_address" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:boxStrokeColor="@color/darkblue"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        app:helperTextTextColor="@color/darkblue"
        app:hintTextColor="@color/darkblue"

        app:endIconMode="password_toggle">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:textStyle="normal"
            android:id="@+id/etPassword"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/darkblue"
        android:layout_gravity="center"
        android:textColor="@color/white"


        android:text="@string/sign_up"
        tools:ignore="UnusedAttribute" />
    <TextView
        android:id="@+id/tvtosignin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        android:textColor="@color/darkblue"
        android:text="@string/already_have_account_signin"
        android:textStyle="bold"/>



</LinearLayout>